# feather-md

./: Cargo.toml  README.md  simple.md  test.md
docs/superpowers/specs/: 2025-04-16-feathermd-design.md  2025-04-16-feathermd-implementation-plan.md
frontend/: app.js  custom-styles.css  index.html  markdown.css
frontend/themes/: github-dark.css  github-light.css  nord.css  one-dark.css
src/: app.rs  config.rs  file_association.rs  file_watcher.rs  main.rs  resources.rs
