[package]
name = "feather-md"
version = "0.1.0"
edition = "2021"
description = "A lightweight Markdown viewer for Windows"
authors = ["FeatherMD"]

[dependencies]
wry = "0.48"
tao = "0.30"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
clap = { version = "4", features = ["derive"] }
dirs = "6"
encoding_rs = "0.8"
percent-encoding = "2"
rfd = "0.17.2"
arboard = "3.6.1"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[profile.release]
opt-level = "z"     # 优化体积
lto = true          # 链接时优化
codegen-units = 1   # 单编译单元，更好的优化
strip = true        # 去除符号信息
panic = "abort"     # 减小二进制体积
